# fast_chat

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.MD  config.py  docker-compose.yml  pyproject.toml
bot/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2d3b0a9608d9_database_creation.py  a1b2c3d4e5f6_add_conversation_table.py
scripts/: celery.sh  run.sh
src/fast_chat/: database.py  exceptions.py  main.py
src/fast_chat/dao/: base.py  conversation.py  message.py  user.py
src/fast_chat/dependencies/: auth.py  database.py
src/fast_chat/models/: conversation.py  message.py  user.py
src/fast_chat/routers/: __init__.py  pages.py
src/fast_chat/routers/v1/: __init__.py  auth.py  conversations.py  messages.py  users.py  ws.py
src/fast_chat/schemas/: message.py  user.py
src/fast_chat/tasks/: celery_app.py  tasks.py
src/fast_chat/templates/: auth.html  chat.html
src/fast_chat/templates/static/css/: auth.css  chat.css
src/fast_chat/templates/static/js/: auth.js  chat.js  common.js  emoji-data.js
src/fast_chat/utils/: auth.py  crypto.py
