[tool.poetry]
name = "fast_chat"
version = "0.1.0"
description = ""
authors = ["justyfay <><sakura.ustinya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
loguru = "^0.7.2"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
jinja2 = "^3.1.4"
websockets = "^13.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
redis = "^5.2.0"
aiogram = "^3.13.1"
celery = "^5.4.0"
gunicorn = "^23.0.0"
flower = "^2.0.1"
ruff = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
